--- a/medconnect-fe/package.json
+++ b/medconnect-fe/package.json
@@ -29,6 +29,7 @@
     "firebase": "^12.3.0",
     "framer-motion": "^12.23.24",
     "intl-messageformat": "10.7.16",
+    "isomorphic-dompurify": "^2.29.0",
     "next": "15.3.1",
     "next-themes": "0.4.6",
     "nextjs-toploader": "^3.9.17",
